# Stereo_IBVS_Sim

./: .gitignore  README.md
src/ibvs_msgs/: CMakeLists.txt  package.xml
src/ibvs_msgs/msg/: PredictedState.msg
src/ibvs_ur5_sim/: CMakeLists.txt  ibvs_ur5_sim_plugins.xml  package.xml
src/ibvs_ur5_sim/config/: mocap_linear_motion.yaml  mocap_sinusoid_motion.yaml  ur5_controllers.yaml
src/ibvs_ur5_sim/include/ibvs_ur5_sim/: pseudo_depth_plugin.h
src/ibvs_ur5_sim/launch/: ibvs_simulation.launch  start_linear_tracking.launch  start_sinusoid_tracking.launch  view_dual_camera.launch
src/ibvs_ur5_sim/models/: ur5e_with_camera.xml
src/ibvs_ur5_sim/scripts/: aruco_LK_detector_node.py  aruco_detector_node.py  aruco_linear_mover.py  aruco_sinusoid_mover.py  dual_vision_tester.py  ground_truth_tf_broadcaster.py  ibvs_control_node.py  set_initial_pose.py  test_tf.py  trigger_ibvs.py
src/ibvs_ur5_sim/src/: pseudo_depth_plugin.cpp
src/ibvs_ur5_sim/worlds/: ur5e_ibvs_scene.xml
src/mujoco_ros_pkgs/: CHANGELOG.md  README.md
src/mujoco_ros_pkgs/.docker/: Dockerfile
src/mujoco_ros_pkgs/.github/workflows/: ci.yaml
src/mujoco_ros_pkgs/mujoco_ros/assets/: pendulum_world.xml
src/mujoco_ros_pkgs/mujoco_ros/src/: viewer.cpp
src/mujoco_ros_pkgs/mujoco_ros/test/: camera_world.xml  empty_world.xml  equality_world.xml  pendulum_world.xml
src/mujoco_ros_pkgs/mujoco_ros/test/launch/: mujoco_render.test  ros_interface.test
src/test/: CMakeLists.txt  package.xml
src/test/src/mjcf/: robot.xml
src/test/src/scripts/: robot.py
